--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@
           <div class="product-content">
             <h3>Product 1</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, tenetur cupiditate facilis obcaecati ullam maiores minima quos perspiciatis similique itaque, esse rerum eius repellendus voluptatibus!</p>
+
+            <!-- Star ratings with filled and unfilled stars -->
             <div class="product-stars">
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star" class="star-full"></i>
@@ -261,12 +263,17 @@
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star"></i>
             </div>
+
+            <!-- Displaying product price with a crossed-out original price -->
             <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+
+            <!-- "Add to Cart" button with an icon -->
             <a href="#"><i data-feather="shopping-cart"></i> <span>add to cart</span></a>
           </div>
         </div>
       </div>
     </div>
+
     <!-- Modal Box Item Detail end -->
 
     <!-- Feather Icons -->
